--- a/ui/app/views/main.html
+++ b/ui/app/views/main.html
@@ -8,34 +8,28 @@
 </div>
 
 <div class="jumbotron">
-  <h1>'Allo, 'Allo!</h1>
-  <p class="lead">
-    <img src="images/yeoman.png" alt="I'm Yeoman"><br>
-    Always a pleasure scaffolding your apps.
-  </p>
-  <p><a class="btn btn-lg btn-success" ng-href="#">Splendid!</a></p>
+  <h1>RxInvoice</h1>
 </div>
 
-<div class="row marketing">
-  <h4>RESTX</h4>
-  <p>
-     The lightweight pure Java open source REST framework.
-  </p>
-
-  <h4>Twitter Bootstrap</h4>
-  <p>
-     Bootstrap, a sleek, intuitive, and powerful mobile first front-end framework for faster and easier web development.
-  </p>
-
-  <h4>Angular</h4>
-  <p>
-    AngularJS is a toolset for building the framework most suited to your application development.
-  </p>
-
-  <h4>Karma</h4>
-  <p>Spectacular Test Runner for JavaScript.</p>
+<div class="row" ng-controller="InvoiceCtrl">
+    <table class="table">
+        <thead>
+        <tr>
+            <th>Reference</th>
+            <th>Customer</th>
+            <th>Date</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr ng-repeat="invoice in invoices">
+            <td>{{invoice.reference}}</td>
+            <td>{{invoice.buyer.name}}</td>
+            <td>{{invoice.date}}</td>
+        </tr>
+        </tbody>
+    </table>
 </div>
 
 <div class="footer">
-  <p>♥ from the Yeoman and RESTX team</p>
+  <p>RxInvoice</p>
 </div>
